# gitinsight_agent

./: .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  app.py  docker-compose.yml  pyproject.toml  start.sh
app/: api.py  graph.py  main.py  schemas.py  vector_store.py
app/agents/: __init__.py  _legacy_extractor.py  _legacy_feedback.py  _legacy_retrieval.py  answer_provider.py  builder.py  classifier.py  evaluator.py  extractor.py  feedback.py  hint_agent.py  query_analyzer.py  question_extractor.py  reporter.py  responder.py
app/core/: config.py  database.py  embedding.py  llm.py  seed.py
app/data/: company_profiles.py
app/prompts/: templates.py
app/service/: vector_service.py
chroma_data/: chroma.sqlite3
data/: medical_knowledge.json
frontend/: ui.py
