[project]
name = "medical-qa-agent"
version = "0.1.0"
description = "Medical QA Agent - RAG 기반 의료 질의응답 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
    "chromadb>=0.5.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-upstage>=0.3.0",
    "langgraph>=0.2.0",
    "langchain>=1.3.11",
    "tiktoken>=0.12.0",
    "pydantic-settings>=2.13.1",
]
